--- a/style.css
+++ b/style.css
@@ -9,11 +9,27 @@ header{
 }
 main{
   width: 100%;
-  height: 300px;
+  height: 400px;
   background-color: brown;
 }
 footer{
   width: 100%;
-  height: 300px;
-  background-color: blueviolet;
+  height: 250px;
+  background-color: tan;
+}
+footer h2{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 28px;
+  padding-left: 35px;
+  padding-top: 25px;
+}
+footer h3{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 19px;
+  padding-left: 35px;
+  padding-top: 14px;
+}
+footer h4{
+  padding-left: 35px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
