--- a/fonte.css
+++ b/fonte.css
@@ -21,3 +21,19 @@ img{
     height: 220px;
     width: 220px;
 }
+footer button{
+    margin-left: 280px;
+    background-color: tan;
+    margin-top: 59px;
+    height: 35px;
+}
+footer h2{
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+}
+footer{
+    width: 100%;
+    height: 150px;
+    background-color: tan;
+}
