--- a/fonte.css
+++ b/fonte.css
@@ -2,3 +2,20 @@
     margin: 0;
     padding: 0;
 }
+footer button{
+    margin-left: 310px;
+    background-color: gray;
+    margin-top: 60px;
+    height: 35px;
+    border-radius: 10px;
+}
+footer h2{
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+}
+footer{
+    width: 100%;
+    height: 150px;
+    background-color: rgb(39, 37, 35);
+}
