--- a/style.css
+++ b/style.css
@@ -11,10 +11,7 @@
   --color-dark5: #343434;
   --color-purple:#b040ff; 
 }
-*{
-  margin: 0;
-  padding: 0;
-}
+
 body{
   font-family: Arial, Helvetica, sans-serif;
   background-color: #272727;
@@ -86,15 +83,11 @@ img{
   top {margin-left: -10vw;}
 }
 
-main{
-  width: 100%;
-  height: 400px;
-  background-color: brown;
-}
+
 footer{
   width: 100%;
   height: 250px;
-  background-color: tan;
+  background-color: rgb(39, 37, 35);
 }
 footer h2{
   font-family: Arial, Helvetica, sans-serif;
@@ -111,4 +104,19 @@ footer h3{
 footer h4{
   padding-left: 35px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+footer a{
+  color: #fff;
+}
+main a{
+  color: #fff;
+}
+main h2{
+  padding-top: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 35px;
+}
+#foto{
+  padding-top: 20px;
+  width: 250px;
 }
