--- a/fonte.css
+++ b/fonte.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    background-color: gray;
 }
 footer button{
     margin-left: 310px;
@@ -18,6 +19,7 @@ h1{
     text-align: center;
     font-size: 35px;
     padding-top: 30px;
+    margin: 6px;
 }
 #iu{
     text-align: center;
@@ -34,6 +36,7 @@ img{
     border-radius: 10px;
     height: 220px;
     width: 220px;
+    margin: 10px;
 }
 footer button{
     margin-left: 310px;
@@ -49,11 +52,15 @@ footer h2{
     color: black;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
+    
 }
 footer{
     width: 100%;
     height: 200px;
     background-color: rgb(39, 37, 35);
+}
+p{
+    margin: 10px;
 }
     
 
