--- a/caixa.css
+++ b/caixa.css
@@ -1,21 +1,45 @@
 *{
     margin: 0;
     padding: 0;
-    background-color: gray;
 }
 h1{
     text-align: center;
     font-size: 35px;
     padding-top: 30px;
 }
-h2{
+main h2{
     font-size: 28px;
+    padding-left: 33px;
 }
-
+main p{
+    padding-left: 25px;
+    font-size: 20px;
+}
 img{
+        border-radius: 10px;
+        height: 220px;
+        width: 290px;
+        margin-top: 30px;
+        margin-left: 525px;
+
+}
+#img2{
     border-radius: 10px;
     height: 220px;
-    width: 220px;
+    width: 400px;
+    margin-top: 30px;
+    margin-left: 465px;
+
+}
+header{
+    background-color: gray;
+    width: 100%;
+    height: 100px;
+}
+main{
+    background-color: gray;
+    width: 100%;
+    height: 1270px;
 }
 footer button{
     margin-left: 295px;
@@ -41,4 +65,7 @@ footer{
     padding-top: 30px;
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
+}
+p{
+    margin: 10px;
 }
