--- a/fonte.css
+++ b/fonte.css
@@ -1,7 +1,6 @@
 *{
     margin: 0;
     padding: 0;
-    background-color: gray;
 }
 footer button{
     margin-left: 310px;
@@ -28,15 +27,30 @@ h1{
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
 }
-h2{
-    font-size: 28px;
+main p{
+    padding-left: 25px;
+    font-size: 20px;
 }
-
+main h2{
+    font-size: 28px;
+    padding-left: 33px;
+}
+header{
+    background-color: gray;
+    width: 100%;
+    height: 100px;
+}
+main{
+    background-color: gray;
+    width: 100%;
+    height: 1000px;
+}
 img{
     border-radius: 10px;
     height: 220px;
     width: 220px;
-    margin: 10px;
+    margin-top: 20px;
+    margin-left: 565px;
 }
 footer button{
     margin-left: 310px;
