--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ img{
 
 footer{
   width: 100%;
-  height: 250px;
+  height: 260px;
   background-color: rgb(39, 37, 35);
 }
 footer h2{
@@ -113,17 +113,32 @@ footer a{
   color: #fff;
 }
 main{
-  height: 1000px;
+  height: 1100px;
 }
 main a{
   color: #fff;
 }
 main h2{
-  padding-top: 50px;
+  padding-top: 55px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 35px;
 }
 #foto{
-  padding-top: 20px;
+  padding-top: 25px;
   width: 250px;
+  margin-left: 10px;
+}
+#foto1{
+  padding-top: 25px;
+  width: 220px;
+  margin-left: 10px;
+}
+#foto2{
+  padding-top: 25px;
+  height: 180px;
+  margin-left: 10px;
+  width: 250px;
+}
+h4{
+  padding-top: 10px;
 }
