--- a/caixa.css
+++ b/caixa.css
@@ -35,12 +35,15 @@ header{
     background-color: gray;
     width: 100%;
     height: 100px;
+    border: 5px white solid;
 }
 main{
     background-color: gray;
     width: 100%;
     height: 1270px;
 }
+
+
 footer button{
     margin-left: 295px;
     background-color: gainsboro;
@@ -58,6 +61,7 @@ footer{
     width: 100%;
     height: 200px;
     background-color: rgb(39, 37, 35);
+    border-top: 5px white solid;
 }
 #iu{
     text-align: center;
