--- a/fonte.css
+++ b/fonte.css
@@ -31,6 +31,13 @@ main p{
     padding-left: 25px;
     font-size: 20px;
 }
+#foto2{
+    border-radius: 10px;
+    height: 190px;
+    width: 270px;
+    margin-top: 20px;
+    margin-left: 543px;
+}
 main h2{
     font-size: 28px;
     padding-left: 33px;
@@ -43,7 +50,7 @@ header{
 main{
     background-color: gray;
     width: 100%;
-    height: 1000px;
+    height: 950px;
 }
 img{
     border-radius: 10px;
